--- a/Vedantu/src/index.css
+++ b/Vedantu/src/index.css
@@ -14,6 +14,10 @@ body {
   font-weight: 600;
   text-decoration: none;
 }
+.bg-gray {
+  background-color: rgba(27,31,35,.08);
+  border-radius: 100%;
+}
 .white-gray {
   background-color: #F6F8FA;
 }
@@ -249,34 +253,7 @@ body {
 .margin-right-0 {
   margin-right: 0px;
 }
-.margin-top-lg-100-xs-150 {
-  margin-top: 100px;
-}
-.margin-top-bottom-lg-0-xs-20 {
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-.text-align-lg-right-xs-center {
-  text-align: right;
-}
 /* END: MARGIN */
-
-@media (max-width: 767px) {
-  .margin-top-lg-100-xs-150 {
-    margin-top: 150px;
-  }
-  .margin-top-bottom-lg-0-xs-20 {
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  .text-align-xs-center {
-    text-align: center;
-  }
-
-  .text-align-lg-right-xs-center {
-    text-align: center;
-  }
-}
 
 /* START: PADDING */
 .no-padding {
@@ -479,7 +456,9 @@ body {
 .padding-right-5 {
   padding-right: 5px;
 }
-
+.max-width-12 {
+  max-width: 12px;
+}
 /* END: PADDING */
 
 /* START: TEXT FORMAT */
@@ -576,59 +555,14 @@ body {
 .font28 {
   font-size: 28px !important;
 }
-.font29 {
-  font-size: 29px !important;
-}
-.font32 {
-  font-size: 32px !important;
-}
-.font35 {
-  font-size: 35px !important;
-}
-.font40 {
-  font-size: 40px !important;
-}
-.font1_8em{
-  font-size: 1.8em !important;
-}
 .float-left {
   float: left;
 }
 .float-right {
   float: right;
 }
-.overflow-auto {
-  overflow: auto;
-}
-.overflow-hidden {
-  overflow: hidden;
-}
-.full-height {
-  height: 100%;
-}
 .full-width {
   width: 100%;
-}
-.half-width {
-  width: 50%;
-}
-.width-35 {
-  width: 35px;
-}
-.z-index1 {
-  z-index: 1;
-}
-.z-index2 {
-  z-index: 2;
-}
-.z-index3 {
-  z-index: 3;
-}
-.object-fit_contain {
-  object-fit: contain
-}
-.object-fit_cover {
-  object-fit: cover
 }
 .border-none {
   border: 0px solid;
@@ -648,79 +582,21 @@ body {
 .border-curved5 {
   border-radius: 5px;
 }
-.line-height-1-6 {
-  line-height: 1.6;
-}
-.text-underline {
-  text-decoration: underline;
-}
+
 /* flex-box */
 .display-flex-only {
   display: flex;
 }
-.display-flex-align-item-center {
-  display: flex;
-  align-items: center;
-}
-.display-flex-justify-content-space-between {
-  display: flex;
-  justify-content: space-between;
-}
-.display-flex-justify-content-space-around {
-  display: flex;
-  justify-content: space-around;
-}
-.display-flex-justify-content-center {
-  display: flex;
-  justify-content: center;
-}
-.display-flex-justify-content-flex-end {
-  display: flex;
-  justify-content: flex-end;
-}
-.flex-direction-column {
-  flex-direction: column;
-}
-.flex-direction-column-reverse {
-  flex-direction: column-reverse;
-}
-.flex-direction-row {
-  flex-direction: row;
-}
-.flex-direction-row-reverse {
-  flex-direction: row-reverse;
-}
-.flex-wrap {
+.display-flex-wrap {
   flex-wrap: wrap;
 }
-.box-shadow {
-  box-shadow: 0 0 3px rgba(0, 0, 0, .30);
-}
-.card-style {
-  background-color: white;
-  border: 1px solid #d0d1d5; 
-  box-shadow: 0 0 5px rgba(0, 0, 0, .30);
-}
-.login-registration-button-before-click {
-  background-color: white;
-  color: rgb(88, 214, 141);
-  height: 50px;
-  border-radius: 8px;
-  border: 2px solid rgb(88, 214, 141);
-}
-.orange-button-style {
-  background-color: #fb833e;
-  color: white;
-  height: 50px;
-  border-radius: 8px;
-  border: none;
-}
 
-.submit-button-style {
-  background-color: rgb(88, 214, 141);
-  color: white;
-  height: 50px;
-  box-shadow: 2px 2px 2px 2px #c0eacd;
-  border-radius: 8px;
-  border: none;
+/* display-table */ 
+.table-object {
+  display: table;
+} 
+.table-object-item {
+  display: table-cell;
+  vertical-align: middle;
+  white-space: nowrap;
 }
